WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269513
Maps sometimes crashes in -[NSPopover showRelativeToRect:ofView:preferredEdge:] when presenting a date picker
https://bugs.webkit.org/show_bug.cgi?id=269513
Summary
Maps sometimes crashes in -[NSPopover showRelativeToRect:ofView:preferredEdge...
Wenson Hsieh
Reported
2024-02-15 14:30:34 PST
rdar://121850106
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2024-02-15 14:47:37 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24552
EWS
Comment 2
2024-02-15 17:42:41 PST
Committed
274782@main
(6579616b4bb7): <
https://commits.webkit.org/274782@main
> Reviewed commits have been landed. Closing PR #24552 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug